# svg_eleksdraw

./: Cargo.toml  README.md
src/: main.rs  stripper.rs
