[package]
name = "svg_mangler"
version = "0.1.0"
authors = ["George Buckenham <vtwentyone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usvg = "0.8.0"
structopt = "0.3.2"
xmlwriter = "0.1"
kurbo = "0.5.1"
glob = "0.3.0"